<resources>
    <string name="app_name">CarParking</string>
    <string name="select_ringtones">Select Ringtones</string>
    <string name="hint_no_lot">No Parking Lot</string>
    <string name="hint_existing_lot">Default Tune</string>
    <string name="hint_office">Office</string>
    <string name="hint_address">Address</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_remaining_lot">Empty Parking Slot</string>
    <string name="select_office">Select Office</string>
    <string name="action_search">Search</string>
    <string name="network_error">Network Error</string>
    <string name="your_info">YOUR INFORMATION</string>
    <string name="settings">Settings</string>
    <string name="hint_mobile_num">Mobile Num</string>
    <string name="hint_car_plate">Car Plate Num</string>
    <string name="already_parked">You already parked.</string>

    <string name="hint_username">Name</string>
    <string name="hint_password">Password</string>

    <string name="processing">Processing...</string>

    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_set_office">Set Office</string>
    <string name="btn_login">Login</string>

    <string name="entering_office">Hi, you are entering your office</string>
    <string name="exiting_office">You are leaving your office</string>
    <string name="no_parking_lot">There are no parking slots.</string>
    <string name="ask_came_with_car">There are parking slots, please confirm if you came in with your car.</string>
    <string name="ask_leaving_office">Are you leaving office?</string>
    <string name="login_failed">Login Failed</string>
</resources>
