<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="omer.parking.com.ui.SettingsActivity">

    <LinearLayout
        android:id="@+id/no_parking_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            style="@style/TextBranch"
            android:text="@string/hint_no_lot"/>

        <TextView
            android:id="@+id/tv_no_parking_tune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="Default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_tune_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            style="@style/TextBranch"
            android:text="@string/hint_existing_lot"/>

        <TextView
            android:id="@+id/tv_default_tune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="Default"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_set_office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonDefault"
        android:text="@string/btn_set_office"/>

</LinearLayout>
